<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:text="@string/app_main_tv_title"
        style="@style/DefaultText"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_subtitle"
        android:text="@string/app_main_tv_subtitle"
        style="@style/AlternativeText"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:hint="@string/app_main_et_name"
        android:inputType="text"
        style="@style/DefaultText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_age"
        android:hint="@string/app_main_et_age"
        android:inputType="number"
        style="@style/DefaultText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_continue"
        android:text="@string/app_main_bt_continue"
        android:onClick="handleSubmit"
        style="@style/AlternativeText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>