<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:text="@string/app_votescreen_tv_title"
        style="@style/DefaultText"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_subtitle"
        android:text="@string/app_votescreen_tv_subtitle"
        style="@style/AlternativeText"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_elect"
        android:hint="@string/app_votescreen_et_elect"
        android:inputType="number"
        style="@style/DefaultText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_vote"
        android:text="@string/app_votescreen_bt_vote"
        android:onClick="handleVerifyVote"
        style="@style/AlternativeText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_elect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_response"
        style="@style/DefaultText"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/bt_vote"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_confirm_vote"
        android:text="@string/app_votescreen_bt_confirm_vote"
        android:onClick="handleConfirmVote"
        style="@style/AlternativeText"
        android:visibility="invisible"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_response"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>